test_suite5/ALAN/test_suite/alan-2022-examples/failing/001280_mutation.alan
source Gb begin call get L end
